<resources>
    <string name="app_name">Appet</string>
    <string name="login">Logar usando uma conta Google</string>
    <string name="inscrever"><u>Inscrever-se</u></string>
    <string name="informe_email_e_senha">Informe o e-mail e a senha</string>
    <string name="Escanear">Escanear</string>
    <string name="Notificacoes">Notificações</string>
    <string name="Configuracoes">Configurações</string>
    <string name="Sobre">Sobre</string>
    <string name="Editar">Editar</string>
    <string name="Nome">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Telefone">Telefone (xx xxxx-xxxx)</string>
    <string name="Cidade">Cidade</string>
    <string name="Bairro">Bairro</string>
    <string name="Sair">Sair</string>
    <string name="Ajuda">Ajuda</string>
    <string name="LinkAjuda">Link de Ajuda</string>
    <string name="Salvar">Salvar</string>
    <string name="Atualizar">Atualizar Dados</string>
    <string name="Excluir">Excluir Conta</string>
    <string name="SalvarQRCode">Salvar QRCode</string>
    <string name="Caracteristicas">Características</string>
    <string name="Desaparecido">Desaparecido?</string>
    <string name="Animal">Animal</string>
    <string name="Cor">Cor</string>
    <string name="Idade">Idade</string>
    <string name="Genero">Gênero</string>
    <string name="Porte">Porte</string>
    <string name="Especie">Espécie</string>
    <string name="Raca">Raça</string>
    <string name="InformacoesDono">Informações do dono</string>
    <string name="NomeDono">Nome do dono</string>
    <string name="TelefoneDono">Telefone do dono</string>
    <string name="title_activity_act_mapa">Mapa</string>
    <string name="tvMapType">Tipo de Lugar</string>
    <string name="tituloMapa">Appet - Mapa</string>
    <string name="MensagemPopup">Digite a mensagem:</string>
    <string name="Mensagem">Mensagem</string>
    <string name="SemConexão">Sem conexão de internet.</string>

    <!--Telas-->
    <string name="TelaPrincipal">Appet - Menu</string>
    <string name="TelaUsuario">Appet - Usuário</string>
    <string name="TelaQRCode">Appet - QR Code</string>
    <string name="TelaNotificacoes">Appet - Notificações</string>
    <string name="TelaPets">Appet - Pets</string>
    <string name="TelaPetsPerdidos">Appet - Pets Perdidos</string>
    <string name="TelaMedicamento">Appet - Medicamento</string>
    <string name="TelaCompromisso">Appet - Compromisso</string>
    <string name="TelaVacina">Appet - Vacina</string>
    <string name="TelaSobre">Appet - Sobre</string>
    <string name="TelaAjuda">Appet - Ajuda</string>

    <!--Evento-->
    <string name="EventoObservacoes">Observações</string>
    <string name="FlagAlerta">Alerta</string>
    <string name="Alerta">Tipo de Alerta</string>

    <!--Medicamento-->
    <string name="NomeMedicamento">Nome do Medicamento</string>
    <string name="Inicio">Data de Início</string>
    <string name="Fim">Data de Fim</string>
    <string name="FrequenciaDiaria">Frequência Diária</string>
    <string name="HorasDeEspera">Tempo de Espera (hs)</string>

    <!--Vacina-->
    <string name="NomeVacina">Nome da Vacina</string>
    <string name="Aplicada">Aplicada?</string>
    <string name="DataAplicacao">Data da Aplicação</string>
    <string name="DataValidade">Data de Validade</string>
    <string name="FrequenciaAnual">Frequência Anual</string>
    <string name="QtdDoses">Qtd de Doses</string>

    <!--Compromisso-->
    <string name="NomeCompromisso">Nome do Compromisso</string>
    <string name="NomeLocal">Nome do Local</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="DataHora">Data e Hora</string>
    <string name="Data">Data</string>
    <string name="Hora">Hora</string>

    <string name="TextoAjuda">Clique na imagem abaixo para informações sobre:\n
        - Tutorial de Uso;\n
        - Utilização de Telas;\n
        - Funcionalidades do Sistema;\n
        - Liberação de permissões (Android 6.0).</string>

</resources>
