<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuNotificacao"
        android:icon="@drawable/ic_notificacao"
        android:title="@string/Notificacoes"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuUsuario"
        android:icon="@drawable/ic_mais"
        android:title="@string/Atualizar"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSobre"
        android:icon="@drawable/ic_mais"
        android:title="@string/Sobre"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSair"
        android:title="@string/Sair"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>