<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivLogo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/tvLogo"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fontColorPrimary"
            android:textSize="25dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNome"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/fontColorPrimary"
            android:padding="10dp"
            android:hint="@string/Nome" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etTelefone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/fontColorPrimary"
            android:padding="10dp"
            android:hint="@string/Telefone"
            android:editable="false"
            android:inputType="phone" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCidade"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/fontColorPrimary"
            android:padding="10dp"
            android:hint="@string/Cidade"
            android:editable="false"
            android:inputType="text" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etBairro"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/fontColorPrimary"
            android:padding="10dp"
            android:hint="@string/Bairro"
            android:editable="false"
            android:inputType="text" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/inscrever"
            android:id="@+id/btCadastrar"
            android:layout_gravity="center_horizontal"
            android:background="@color/buttonColorPrimary"
            android:textColor="@color/fontColorPrimary"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:padding="5dp" />

    </LinearLayout>
</LinearLayout>
