<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/llDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivFotoPet"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvAnimal"
            android:text="@string/Animal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spAnimal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvNomeCompromisso"
            android:text="@string/NomeCompromisso"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNomeCompromisso"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/NomeCompromisso" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvNomeLocal"
            android:text="@string/NomeLocal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etNomeLocal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/NomeLocal"
            android:editable="false"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvDataHora"
            android:text="@string/DataHora"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:id="@+id/llDados2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etData"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/Data"
            android:editable="false"
            android:focusable="false"
            android:inputType="datetime" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etHora"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/Hora"
            android:editable="false"
            android:focusable="false"
            android:inputType="datetime" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvEventoObservacoes"
            android:text="@string/EventoObservacoes"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etEventoObservacoes"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/EventoObservacoes"
            android:editable="false"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Salvar"
            android:id="@+id/btCadastrar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/buttonColorPrimary"
            android:textColor="@color/fontColorPrimary"
            android:padding="5dp" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
