<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/llDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/ivFotoUsuario"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Appet"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tvNomeLabel"
            android:text="@string/Nome"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNome"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Nome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tvEmailLabel"
            android:text="@string/Email"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tvTelefoneLabel"
            android:text="@string/Telefone"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etTelefone"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Telefone"
            android:editable="false"
            android:inputType="phone"
            android:maxLength="13"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tvCidadeLabel"
            android:text="Cidade e Bairro"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:id="@+id/llDados2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCidade"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/Cidade"
            android:editable="false"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etBairro"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Bairro"
            android:editable="false"
            android:inputType="text" />

        </LinearLayout>

        <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Atualizar"
        android:id="@+id/btAtualizar"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColorPrimary"
        android:textColor="@color/fontColorPrimary"
        android:layout_marginTop="5dp"
        android:drawablePadding="3dp"
        android:padding="3dp" />

        <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Excluir"
        android:id="@+id/btExcluir"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:textColor="@color/fontColorPrimary"
        android:layout_marginTop="10dp"
        android:drawablePadding="3dp"
        android:padding="3dp" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
