<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivLogo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_pata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/tvLogo"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fontColorPrimary"
            android:textSize="25dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btLogin"
            android:layout_gravity="center_horizontal"
            android:background="@color/buttonColorPrimary"
            android:textColor="@color/fontColorPrimary"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_google"
            android:drawablePadding="5dp"
            android:padding="5dp" />

        <Button
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/Escanear"
            android:id="@+id/btEscanear"
            android:layout_gravity="center_horizontal"
            android:background="@color/buttonColorPrimary"
            android:textColor="@color/fontColorPrimary"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_qrcode"
            android:drawablePadding="5dp"
            android:padding="5dp" />

    </LinearLayout>
</LinearLayout>
